Ajout de la structure pour les titres commencant par A

--- a/index.html
+++ b/index.html
@@ -3,5 +3,11 @@
 		<title>Catalogue de mes dvd</title>
 	</head>
 	<body>
+		<div class="entete">
+			<h1>Index</h1>
+		</div>
+		<div class="titrea">
+			<h2>Titre commancant par A</h2>
+		</div>
 	</body>
 </html>
