Modification de index.html pour ajouter le fichier des styles

--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <html language="fr">
 	<head>
 		<title>Catalogue de mes dvd</title>
+		<style href="style.css" type="text/css"/>
 	</head>
 	<body>
 		<div class="entete">
